sign up + login + logout

--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .tickets-buy {
-  background-color: $gray-lightest;
+  background-color: $gray-light;
   padding-bottom: 80px;
   .tickets-header {
     padding-top: 60px;
