--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,35 @@
 <html>
 <head>
   <title>CsTemplate</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Log In</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
-      </li>
-    </ul>
-  </nav>  
-
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+  <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
+  <% if !authenticated? %>
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="<%= login_path %>">Log In</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= register_path %>">Sign Up</a>
+        </li>
+      </ul>
+  <% end %>
+  <% if authenticated? %>
+      <ul class="nav navbar-nav navbar-right" id="right-nav-bar">
+        <li class="nav-item">
+          <form action="<%= logout_path %>" method="post">
+            <%= token_tag %>
+            <button class="btn btn-link navbar-btn" type="submit">Logout</button>
+          </form>
+        </li>
+      </ul>
+  <% end %>
+</nav>
 <%= yield %>
 
 </body>
