--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CsTemplate</title>
+  <title>Coderticket</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -21,6 +21,18 @@
       </ul>
   <% end %>
   <% if authenticated? %>
+      <ul class="nav navbar-nav">
+        <li class="nav-item dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Venues
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="<%= venues_path %>">List</a></li>
+            <li><a href="<%= new_venue_path %>">Create new venue</a></li>
+          </ul>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right" id="right-nav-bar">
         <li class="nav-item">
           <form action="<%= logout_path %>" method="post">
