--- a/app/views/events/my_events.html.erb
+++ b/app/views/events/my_events.html.erb
@@ -1,1 +1,11 @@
 <div class='events-header' style='background-image: url(<%= header_background_image_url %>)'></div>
+<div class="container-fluid events-list">
+  <h2>My managing events</h2>
+  <% @events.in_groups_of(2) do |g| %>
+      <div class="row">
+        <% g.compact.each do |e| %>
+            <%= render partial: 'card', locals: {event: e} %>
+        <% end %>
+      </div>
+  <% end %>
+</div>
