--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -1,12 +1,18 @@
 <div class="col-md-6">
   <%= link_to event_path(event) do %>
-    <div class="card">
-      <img class="card-img-top" src="<%= event.hero_image_url %>">
-      <div class="card-block">
-        <h4 class="card-title"><%= event.name %></h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
+      <div class="card">
+        <img class="card-img-top" src="<%= event.hero_image_url %>">
+        <div class="card-block">
+          <h4 class="card-title">
+            <%= event.name %>
+            <% if event.starts_at < Date.today %>
+                <span class="label label-danger">Outdated</span>
+            <% end %>
+          </h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.
+          </p>
+        </div>
       </div>
-    </div>
   <% end %>
 </div>  
