--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,6 +22,8 @@
         <%= link_to new_event_ticket_path(@event) do %>
             <button class='btn btn-lg btn-block btn-danger'> BOOK NOW</button>
         <% end %>
+        <br/>
+        <%= edit_button(@event) %>
       </div>
     </div>
     <div class="col-md-9 event-content">
@@ -54,19 +56,14 @@
 
       </div>
     </div>
-  </div>
-
-  <div class="col-md-9 event-content">
-
-    <div class="container">
-      <h3>Related Event</h3>
-      <% @related_events.each do |e| %>
-          <div><a href="<%= event_path(e) %>"><%= "#{e.name} at #{e.venue.name}" %></a></div>
-      <% end %>
+    <div class="col-md-9 event-content">
+      <div class="container">
+        <h3>Related Event</h3>
+        <% @related_events.each do |e| %>
+            <div><a href="<%= event_path(e) %>"><%= "#{e.name} at #{e.venue.name}" %></a></div>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
-
-<div class="container-fluid events-list">
 
 </div>
