--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,62 @@
 <div class='events-header' style='background-image: url(<%= header_background_image_url %>)'></div>
 <div class="container-fluid">
   <div class="col-md-8">
-    <h2>Editing an event</h2>
+    <h2>Event information</h2>
+    <%= flash_messages %>
+
     <%= render partial: 'form', locals: {form_method: 'post', form_action: event_path(@event.id)} %>
+
+    <hr/>
+
+    <h2>Ticket types</h2>
+    <form method="post" action="<%= event_tickets_path(@event.id) %>" class="form-inline">
+      <%= token_tag %>
+      <table class="table table-striped table-hover center-block">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Max quantity</th>
+          <th>Min quantity</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @event.ticket_types.each do |type| %>
+            <tr>
+              <td><%= type.name %></td>
+              <td><%= type.price %></td>
+              <td><%= type.max_quantity %></td>
+              <td><%= type.min_quantity %></td>
+            </tr>
+        <% end %>
+        <tr>
+          <td><input class="form-control" type="text" id="ticket[name]" name="ticket[name]" placeholder="VIP"/></td>
+          <td><input class="form-control" type="text" id="ticket[price]" name="ticket[price]" placeholder="10000"/></td>
+          <td>
+            <input class="form-control" type="text" id="ticket[max_quantity]" name="ticket[max_quantity]" placeholder="100"/>
+          </td>
+          <td>
+            <input class="form-control" type="text" id="ticket[min_quantity]" name="ticket[min_quantity]" placeholder="1"/>
+            <button class="btn btn-primary" type="submit">Add</button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </form>
+    <br/>
+    <h2>Publish</h2>
+    <% if @event.published? %>
+        <form method="post" action="<%= publish_event_events_path(@event) %>">
+          <%= token_tag %>
+          <input type="hidden" id="event[publish]" name="event[publish]" value="false"/>
+          <button class="btn btn-warning" type="submit">Unpublish</button>
+        </form>
+    <% elsif @event.can_publish? %>
+        <form method="post" action="<%= publish_event_events_path(@event) %>">
+          <%= token_tag %>
+          <input type="hidden" id="event[publish]" name="event[publish]" value="true"/>
+          <button class="btn btn-success" type="submit">Publish</button>
+        </form>
+    <% end %>
   </div>
 </div>
