--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -19,32 +19,34 @@
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-11 col-md-offset-1">
-      <table class="table">
-        <thead>
-        <tr>
-          <th>Ticket Type</th>
-          <th>Unit Price</th>
-          <th>Quantity</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @event.ticket_types.each do |type| %>
-            <tr>
-              <td><%= type.name %></td>
-              <td><%= number_to_currency(type.price, unit: 'VND ', precision: 0) %></td>
-              <td><%= select_tag('quantity', options_for_select(0..10)) %></td>
-            </tr>
-        <% end %>
-        </tbody>
-      </table>
+  <form method="post" action="<%= buy_event_tickets_path(@event) %>">
+    <%= token_tag %>
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1">
+        <table class="table table-hover table-striped">
+          <thead>
+          <tr>
+            <th>Ticket Type</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @event.ticket_types.each do |type| %>
+              <tr>
+                <td><%= type.name %></td>
+                <td><%= number_to_currency(type.price, unit: 'VND ', precision: 0) %></td>
+                <td><%= select_tag('quantity', options_for_select(min_quantity(type)..max_quantity(type)), class: 'form-control', name: "tickets[#{type.id}]") %></td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2 col-md-offset-5">
-      <button class="btn btn-success btn-lg btn-block">Buy</button>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <button class="btn btn-success btn-lg btn-block" type="submit">Buy</button>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
