--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -36,7 +36,12 @@
               <tr>
                 <td><%= type.name %></td>
                 <td><%= number_to_currency(type.price, unit: 'VND ', precision: 0) %></td>
-                <td><%= select_tag('quantity', options_for_select(min_quantity(type)..max_quantity(type)), class: 'form-control', name: "tickets[#{type.id}]") %></td>
+                <td>
+                  <%= select_tag('quantity',
+                                 options_for_select((type.min_quantity_to_purchase)..(type.max_quantity_to_purchase),
+                                                    class: 'form-control',
+                                                    name: "tickets[#{type.id}]")) %>
+                </td>
               </tr>
           <% end %>
           </tbody>
