--- a/app/views/tickets/buy.html.erb
+++ b/app/views/tickets/buy.html.erb
@@ -1,6 +1,8 @@
 <div class='events-header' style='background-image: url(<%= header_background_image_url %>)'></div>
 <div class="container-fluid">
   <div class="col-md-8">
+    <br/>
+    <%= flash_messages %>
     <h2>Order information</h2>
     <h4>Event</h4>
     <div class="form-group">
