--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,8 +19,10 @@
             </div>
             <div class="clearfix"></div>
         <% end %>
-        <%= link_to new_event_ticket_path(@event) do %>
-            <button class='btn btn-lg btn-block btn-danger'> BOOK NOW</button>
+        <% if @event.published? %>
+            <%= link_to new_event_ticket_path(@event) do %>
+                <button class='btn btn-lg btn-block btn-danger'> BOOK NOW</button>
+            <% end %>
         <% end %>
         <br/>
         <%= edit_button(@event) %>
